--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main>
             <section class="breed section">
                 <header id="breed" class="paragraph">
-                    <h1>О породе Вельш-корги</h1>
+                    <h1>О породе вельш-корги</h1>
                 </header>
                 <section>
                     <h2 class="subparagraph">Происхождение</h2>
@@ -62,11 +62,11 @@
                     <div class="container-cards-corgi">
                         <div class="card-corgi">
                             <img src="./images/cardigan.png" alt="Вельш Корги Кардиган" class="corgi-img">
-                            <span>Вельш Корги Кардиган</span>
+                            <span>Вельш-корги кардиган</span>
                         </div>
                         <div class="card-corgi">
                             <img src="./images/pembrok.png" alt="Вельш Корги Пемброк" class="corgi-img">
-                            <span>Вельш Корги Пемброк</span>
+                            <span>Вельш-корги пемброк</span>
                         </div>
                     </div>
                 </section>
