--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="keywords" content="">
         <link rel="stylesheet" type="text/css" href="./css/corgi.css">
+        <link rel=canonical href="https://christimiyy.github.io/velsh-corgi/">
     </head>
     <body>
         <div class="header">
