--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Вельш-корги</title>
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="description" content="Вельш-корги: всё о породе – происхождение, виды, характер и поведение, советы по уходу и воспитанию. Подробная информация и рекомендации для владельцев корги на сайте.">
+        <meta name="keywords" content="вельш-корги, корги пемброк, корги кардиган, порода корги, описание корги, история породы корги, характер корги, уход за корги, воспитание корги, дрессировка корги, особенности корги, здоровье корги, советы владельцам корги, щенки корги">
         <link rel="stylesheet" type="text/css" href="./css/corgi.css">
         <link rel=canonical href="https://christimiyy.github.io/velsh-corgi/">
     </head>
