--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
         </main>
         <footer class="footer">
             <p>
-                Если у Вас остались вопросы, можете написать мне в телеграм 
-                <a class="footer_link" href="t.me/christimiyy">@christimiyy</a>
+                Если у Вас остались вопросы, можете написать на почту 
+                <a class="footer_link" href="mailto:zkristina05@mail.ru">zkristina05@mail.ru</a>
             </p>
     </footer>
     </body>
