--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <footer class="footer">
             <p>
                 Если у Вас остались вопросы, можете написать на почту 
-                <a class="footer_link" href="mailto:zkristina05@mail.ru">zkristina05@mail.ru</a>
+                <a class="mail" href="mailto:zkristina05@mail.ru">zkristina05@mail.ru</a>
             </p>
     </footer>
     </body>
