--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
         <meta name="keywords" content="вельш-корги, корги пемброк, корги кардиган, порода корги, описание корги, история породы корги, характер корги, уход за корги, воспитание корги, дрессировка корги, особенности корги, здоровье корги, советы владельцам корги, щенки корги">
         <link rel="stylesheet" type="text/css" href="./css/corgi.css">
         <link rel=canonical href="https://christimiyy.github.io/velsh-corgi/">
+        <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(99125199, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/99125199" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
     </head>
     <body>
         <div class="header">
